<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/productListFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/chatbotFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/nav_chatbot" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/nav_cart" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_account" />
    <item
        android:id="@+id/helpFragment"
        android:icon="@drawable/ic_support"
        android:title="@string/nav_support" />
</menu>
